--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,22 @@
 
     <head>
         <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <title>Get your work done</title><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;display=swap%7cMontserrat:400,600,700&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/plugins/bootstrap4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/plugins/owl-carousel/assets/owl.carousel.css">
-    <link rel="stylesheet" href="assets/plugins/jquery-bar-rating/dist/themes/fontawesome-stars.css">
-    <link rel="stylesheet" href="assets/plugins/jquery-ui/jquery-ui.min.css">
-    <link rel="stylesheet" href="assets/plugins/select2/dist/css/select2.min.css">
-    <link rel="stylesheet" href="assets/fonts/athena/style.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="format-detection" content="telephone=no">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="author" content="">
+        <meta name="keywords" content="">
+        <meta name="description" content="">
+        <title>Jobolt</title><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;display=swap%7cMontserrat:400,600,700&amp;display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="assets/plugins/bootstrap4/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/plugins/owl-carousel/assets/owl.carousel.css">
+        <link rel="stylesheet" href="assets/plugins/jquery-bar-rating/dist/themes/fontawesome-stars.css">
+        <link rel="stylesheet" href="assets/plugins/jquery-ui/jquery-ui.min.css">
+        <link rel="stylesheet" href="assets/plugins/select2/dist/css/select2.min.css">
+        <link rel="stylesheet" href="assets/fonts/athena/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
 
     <body>
