Can't remember the changes.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
         <meta name="author" content="">
         <meta name="keywords" content="">
         <meta name="description" content="">
-        <title>Jobolt</title><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;display=swap%7cMontserrat:400,600,700&amp;display=swap" rel="stylesheet">
+        <title>Jobolt</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;display=swap%7cMontserrat:400,600,700&amp;display=swap" rel="stylesheet">
         <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/plugins/bootstrap4/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/plugins/owl-carousel/assets/owl.carousel.css">
@@ -19,6 +20,7 @@
         <link rel="stylesheet" href="assets/plugins/select2/dist/css/select2.min.css">
         <link rel="stylesheet" href="assets/fonts/athena/style.css">
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
     </head>
 
     <body>
@@ -27,17 +29,17 @@
         <main id="root"></main>
 
         <!-- Plugins-->
-    <script src="assets/plugins/jquery-1.12.4.min.js"></script>
-    <script src="assets/plugins/owl-carousel/owl.carousel.min.js"></script>
-    <script src="assets/plugins/bootstrap4/js/bootstrap.min.js"></script>
-    <script src="assets/plugins/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/plugins/masonry.pkgd.min.js"></script>
-    <script src="assets/plugins/jquery-bar-rating/dist/jquery.barrating.min.js"></script>
-    <script src="assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <script src="assets/plugins/select2/dist/js/select2.full.min.js"></script>
-    <script src="assets/plugins/anime.min.js"></script>
-    <script src="assets/plugins/wow.min.js"></script>
-    <script src="assets/js/main.js"></script>
+        <script src="assets/plugins/jquery-1.12.4.min.js"></script>
+        <script src="assets/plugins/owl-carousel/owl.carousel.min.js"></script>
+        <script src="assets/plugins/bootstrap4/js/bootstrap.min.js"></script>
+        <script src="assets/plugins/imagesloaded.pkgd.min.js"></script>
+        <script src="assets/plugins/masonry.pkgd.min.js"></script>
+        <script src="assets/plugins/jquery-bar-rating/dist/jquery.barrating.min.js"></script>
+        <script src="assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+        <script src="assets/plugins/select2/dist/js/select2.full.min.js"></script>
+        <script src="assets/plugins/anime.min.js"></script>
+        <script src="assets/plugins/wow.min.js"></script>
+        <script src="assets/js/main.js"></script>
     </body>
 
 </html>
