--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         <main id="root"></main>
 
         <!-- Plugins-->
+        <script src="assets/plugins/bootstrap4/js/popper.js"></script>
         <script src="assets/plugins/jquery-1.12.4.min.js"></script>
         <script src="assets/plugins/owl-carousel/owl.carousel.min.js"></script>
         <script src="assets/plugins/bootstrap4/js/bootstrap.min.js"></script>
